Corrections in the class to derive the unit of astnode elements.